--- a/03-September/Q1Assinment.html
+++ b/03-September/Q1Assinment.html
@@ -17,13 +17,13 @@
 
     </p>
     <p>
-        <mark>this text will be highlited</mark>
+        <mark>This text will be highlited</mark>
     </p>
     <p>
         This is normal text<sup>This wil be superscripted</sup>This is normal again
     </p>
     <p>
-        This is normal text<sub>this text will be subscripted</sub>this is normal again
+        This is normal text<sub>This text will be subscripted</sub>This is normal again
     </p>
     <p>Normal Text <small>Small Text
     </small></p>
