--- a/03-September/Q4Orderedlist.html
+++ b/03-September/Q4Orderedlist.html
@@ -10,7 +10,7 @@
     
         
         <ol>
-            <li>P:It is used to display a pragraph<</li>
+            <li>P:It is used to display a pragraph</li>
             <li>a:It is anchor tag used to make link and access different part of webapage or different webpages (external to it)</li>
             <li>hr:It displays an horizontal line </li>
             <li>b:It makes text bold  </li>
