--- a/03-September/Q6Assignment.html
+++ b/03-September/Q6Assignment.html
@@ -11,10 +11,49 @@
         <li>HTML</li>
         <table border="1">
             <tr>
-                <th>Primary Use Cases</th>
-                <th>Key Features/Benifits</th>
+                <td><b>Primary Use Cases</b></td>
+                <td><b>Key Features/Benifits</b></td></b>
+            </tr>
+            <tr>
+                <td>Building the structure of webpages </td>
+                <td><ul>
+                    <li>Simple and easy to learn</li>
+                    <li>Compatible with all browsers</li>
+                    <li>Allows for semantic markup</li>
+                </ul></td>
             </tr>
         </table>
+        <li>CSS</li>
+        <table border="1">
+            <tr>
+                <td><b>Primary Use Cases</b></td>
+                <td><b>Key Features/Benifits</b></td></b>
+            </tr>
+            <tr>
+                <td>Styling and formatting web documents</td>
+                <td><ul>
+                    <li>Compatible with all browsers</li>
+                    <li>Styles can be universally applied</li>
+                    <li>It follows a cascading order, prioritizing specific styling rules</li>
+                </ul></td>
+            </tr>
+        </table>
+        <li>JavaScript</li>
+        <table border="1">
+            <tr>
+                <td><b>Primary Use Cases</b></td>
+                <td><b>Key Features/Benifits</b></td></b>
+            </tr>
+            <tr>
+                <td>It enhances interactivity and user experience on the web</td>
+                <td><ul>
+                    <li>JavaScript enhances web pages by dynamically updating content</li>
+                    <li>JavaScript can automate tasks in web browsers, making repetitive jobs easier.</li>
+                    <li>It lets websites do multiple things at once, keeping them fast and responsive</li>
+                </ul></td>
+            </tr>
+        </table>
+        
     </ol>
 </body>
 </html>
