--- a/16-September/Q3AssiVideoAudio.html
+++ b/16-September/Q3AssiVideoAudio.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     
-    <video src="https://player.vimeo.com/external/457669476.sd.mp4?s=b37df568f0c415b034c367b6afea6dc358042dc4&profile_id=165&oauth2_token_id=57447761" controls autoplay loop height="400" width="500"  >Your Browser does not support this video format</video>
+    <video src="https://player.vimeo.com/external/457669476.sd.mp4?s=b37df568f0c415b034c367b6afea6dc358042dc4&profile_id=165&oauth2_token_id=57447761" controls autoplay muted height="400" width="500"  >Your Browser does not support this video format</video>
      
-    <audio src="Sample.mp3" controls autoplay >Your browser does not support this audio format</audio>
+    <audio src="Sample.mp3" controls autoplay loop >Your browser does not support this audio format</audio>
 </body>
 </html>
