--- a/23-September/Q1Application Css.html
+++ b/23-September/Q1Application Css.html
@@ -21,7 +21,7 @@
             <li style="background-color: aqua;">Inline CSS</li>
             <!-- Internal CSS -->
             <li class="InternalCss">Internal CSS</li>
-            <!-- External -->
+            <!-- External CSS-->
             <li class="ExternalCss">External CSS</li>
             
         </ul>
