--- a/23-September/Q1Application Css.html
+++ b/23-September/Q1Application Css.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Application of CSS </title>
     <!-- Below line is for linking of css file and demo of "External css" -->
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="Q1Style.css">
     <!-- Below this line ,style tag  is used for "Internal css" -->
     <style>
         .InternalCss{
